--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "rimraf dist && vite build && gh-pages -d dist -t true"
+    "deploy": "rimraf dist && vite build && gh-pages -d dist"
   },
   "dependencies": {
     "react": "^19.1.0",
